# tests-automatiques-django

./: Makefile  README.md  setup.cfg  setup.py
.github/workflows/: main.yml
environment/: docker-compose.yml
environment/docker-entrypoint-initdb.d/: create.sql
src/mysite/: asgi.py  settings.py  urls.py  wsgi.py
src/polls/: apps.py  local.py  models.py  tests.py  views.py  votes.py
src/polls/migrations/: 0001_initial.py  0002_alter_choice_question.py
tests/dintegrations/: conftest.py  test_all.py  test_local.py
tests/dunits/: conftest.py  settings.py  test_all.py
tests/fixtup/mysql/.hooks/: hook_started.py
tests/fixtup/polls/: choices.csv  polls.csv
tests/fixtup/polls/.hooks/: hook_started.py.sample
tests/units/: test_all.py  test_time.py
