[Metadata]
name = getting-started-django
version = 0.1.0
description = ""
long_description = file: README.md
authors =
    "Fabien Arcellier<fabien.arcellier@gmail.com>"
classifiers =
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python
license = "MIT"
readme = "README.md"

[options]
packages = find:
package_dir =
    =src
python_requires = >= 3.6
install_requires =
    mysqlclient
    django
    freezegun
    fixtup
    pytest


[options.packages.find]
where = src

[fixtup]
fixtures = tests/fixtup
plugins=
    fixtup.plugins.docker
    fixtup.plugins.dotenv
